<resources>
    <!--    config app name-->
    <string name="app_name">Match Mingle</string>
    <!--    config string view-->
    <string name="disance_text">Distance</string>
    <string name="gender_text">Gender</string>
    <string name="age_text">Age</string>
    <string name="height_text">Height (cm) </string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="male_text">Male</string>
    <string name="female_text">Female</string>
    <string name="shemale_text">Shemale</string>
    <!--    config figma icon-->
    <string name="home_ic">\uf015</string>
    <string name="chat_ic">\uf086</string>
    <string name="info_ic">\uf129</string>
    <string name="heart_ic">\uf004</string>
    <string name="profile_ic">\uf007</string>
    <string name="close_ic">\uf00d</string>
    <string name="check_ic">\u2713</string>
    <string name="image_ic">\uf03e</string>
    <string name="micro_ic">\uf130</string>
    <string name="send_ic">\uf1d8</string>
    <string name="back_ic">\uf060</string>
    <string name="moreinfo_ic">\uf05a</string>
    <string name="noti_ic">\uf0a2</string>
    <!--    config string distance spinner -->
    <string-array name="distance_spinner_items">
        <item>0 km</item>
        <item>1 km</item>
        <item>2 km</item>
        <item>3 km</item>
        <item>4 km</item>
        <item>5 km</item>
        <item>6 km</item>
        <item>7 km</item>
        <item>8 km</item>
        <item>9 km</item>
        <item>10 km</item>
        <item>11 km</item>
        <item>12 km</item>
        <item>13 km</item>
        <item>14 km</item>
        <item>15 km</item>
        <item>16 km</item>
        <item>17 km</item>
        <item>18 km</item>
        <item>19 km</item>
        <item>20 km</item>
    </string-array>
    <array name="AgeRangeSlider">
        <item>25</item>
        <item>70</item>
    </array>
    <array name="HeightRangeSlider">
        <item>145</item>
        <item>170</item>
    </array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>