<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/toolbar_background"
    android:paddingHorizontal="12dp"
    android:gravity="center"
    android:orientation="horizontal"
    android:weightSum="4">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/icon_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/home"
        android:fontFamily="@font/fa_solid_900"
        android:text="@string/home_ic"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:gravity="center"
        android:layout_weight="1"
        style="?android:attr/borderlessButtonStyle"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/icon_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/favorite"
        android:fontFamily="@font/fa_solid_900"
        android:text="@string/heart_ic"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:gravity="center"
        android:layout_weight="1"
        style="?android:attr/borderlessButtonStyle"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/icon_chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/chat"
        android:fontFamily="@font/fa_solid_900"
        android:text="@string/chat_ic"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:gravity="center"
        android:layout_weight="1"
        style="?android:attr/borderlessButtonStyle"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/icon_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/profile"
        android:fontFamily="@font/fa_solid_900"
        android:text="@string/profile_ic"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:gravity="center"
        android:layout_weight="1"
        style="?android:attr/borderlessButtonStyle"/>
</LinearLayout>