<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/message_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:elevation="4dp"
        app:contentInsetStart="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetStartWithNavigation="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/icon_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_left"
                android:layout_alignParentLeft="true"
                android:padding="10dp" />

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Filter"
                android:textSize="25dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_centerInParent="true" />

            <TextView
                android:id="@+id/icon_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="-1dp"
                android:padding="10dp"
                android:text="@string/check_ic"
                android:textColor="@color/purple_2"
                android:textSize="20dp"
                android:fontFamily="@font/fa_solid_900"/>

        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/disance_text"
                android:textColor="@color/black"
                android:textSize="17dp"
                android:textStyle="bold"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/distance_spinner"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gender_text"
                android:textColor="@color/black"
                android:textSize="17dp"
                android:textStyle="bold"
                android:layout_marginTop="15dp"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/gender_radio_group"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal">
                <RadioButton
                    android:text="@string/male_text"
                    android:id="@+id/male_radio_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:text="@string/female_text"
                    android:id="@+id/female_radio_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:text="@string/shemale_text"
                    android:id="@+id/shemale_radio_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/age_text"
                android:textColor="@color/black"
                android:textSize="17dp"
                android:textStyle="bold"
                android:layout_marginTop="15dp"/>

            <com.main.customs.CustomRangeSeekBar
                android:id="@+id/age_seek_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/height_text"
                android:textColor="@color/black"
                android:textSize="17dp"
                android:textStyle="bold"
                android:layout_marginTop="15dp"/>

            <com.main.customs.CustomRangeSeekBar
                android:id="@+id/height_seek_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:thumbMax="200"
                app:thumbMin="0"/>

        </LinearLayout>
</LinearLayout>