<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    android:paddingBottom="5dp"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true">

        <RelativeLayout
            android:id="@+id/chat_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/back_chat"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/back_ic"
                android:textSize="20dp"
                android:gravity="start|center_vertical"
                android:fontFamily="@font/fa_solid_900"
                style="?android:attr/borderlessButtonStyle"/>

            <ImageView
                android:id="@+id/user_chat_image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@id/back_chat"
                android:layout_centerVertical="true"
                android:src="@drawable/lisa"/>

            <TextView
                android:id="@+id/chat_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Name"
                android:textSize="25dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_toEndOf="@id/user_chat_image"
                android:layout_marginStart="16dp"
                android:layout_centerVertical="true"
                android:gravity="center" />
        </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chat_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chat_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:layout_alignParentBottom="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/image_ic"
            android:fontFamily="@font/fa_solid_900"
            android:textColor="@color/purple_2"
            android:textSize="30dp"
            android:id="@+id/send_image"
            android:layout_marginRight="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/micro_ic"
            android:fontFamily="@font/fa_solid_900"
            android:textColor="@color/purple_2"
            android:textSize="30dp"
            android:layout_marginRight="15dp"/>

        <EditText
            android:id="@+id/edit_text_message"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="15dp"
            android:background="@drawable/textbox_background"
            android:hint="Type anything"
            android:textColorHint="@color/gray_4"
            android:paddingLeft="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_ic"
            android:fontFamily="@font/fa_solid_900"
            android:textColor="@color/purple_2"
            android:textSize="25dp"
            android:layout_marginRight="15dp"
            android:id="@+id/button_send"/>
    </LinearLayout>
</RelativeLayout>